--- a/.github/workflows/regression_tests.yml
+++ b/.github/workflows/regression_tests.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.MYFISH_PAT || github.token }}
+          token: ${{ secrets.MYFISH_CLASSIC_PAT || github.token }}
 
       - name: Set up Python
         uses: actions/setup-python@v5
